# qwen-image-1.9

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
configs/deploy/: stage-5-vllm-omni-stage-config.yaml
configs/merge/: stage-1-compatibility.schema.yaml  stage-2-delta-edit.yaml  stage-2-layered-bridge.yaml  stage-2-run-profiles.yaml  stage-2-synthetic-dataset.yaml  stage-2-ties-text-encoder.yaml
docs/: architecture.md  merging-notes.md  quantization-notes.md  release-policy.md  remote-execution.md
examples/notebooks/: README.md
reports/: stage-1-compatibility-matrix.json  stage-1-dna-report.md  stage-2-fusion-report.md  stage-2-merge-manifest.json  stage-3-eval-report.md  stage-4-quantization-report.md  stage-5-deployment-report.md  stage-5-generated-stage-config.yaml
scripts/: stage-1-analyze-vae-compat.py  stage-1-compare-state-dicts.py  stage-1-probe-rope-compat.py  stage-1-render-similarity-viz.py  stage-2-build-edit-delta.py  stage-2-build-layered-bridge.py  stage-2-compose-bf16-checkpoint.py  stage-2-generate-teacher-dataset.py  stage-2-merge-text-encoders.py  stage-3-run-capability-evals.py  stage-3-run-safety-evals.py  stage-4-build-imatrix.py  stage-4-quantize-gguf.sh  stage-5-benchmark-stage-graph.py  stage-5-generate-stage-config.py
stage-2/: run-status.json
tests/: test_cli_stage2_modes.py  test_stage_1_config_and_mapping.py  test_stage_2_diffusion_runtime.py  test_stage_2_edit_model_invocation.py  test_stage_2_merge_recipes.py  test_stage_3_eval_registry.py  test_stage_4_quant_configs.py  test_stage_5_stage_config_schema.py
(+30 files in other folders)
