[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-image-1-9"
version = "0.1.0"
description = "Remote-first scaffold for Project Qwen-Image 1.9."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "accelerate>=0.30",
  "diffusers>=0.30",
  "matplotlib>=3.8",
  "Pillow>=10.0",
  "safetensors>=0.4",
  "torch>=2.2",
  "transformers>=4.44"
]
authors = [
  { name = "Qwen-Image 1.9 Community Bridge" }
]
keywords = ["qwen", "image-generation", "remote-first", "research-scaffold"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11"
]

[project.scripts]
q19 = "qwen_image_19.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
